@@ -11,6 +11,7 @@
       - shows an idle screen with the IP address after 30min
     * Name and location of printer in ini file is wrapped by quotes, "#" sign encoded in URL
     * Fix negative timeout being possible in serial read
+    * Change of name / location of printer in PrusaLink fixed (added quotes, removed from endpoint json)
 
 0.6.0 (2021-12-17)
     * Added endpoint for control of extruder
